# killmath

./: Cargo.toml  README.md  mac.nix  rebuilder.nimic  shell.nix  y-combinator.nimic
src/: main.rs
