[package]
name = "killmath"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2018"

[dependencies]
# { git = "https://github.com/bevyengine/bevy", rev = "7166a28bafa669eac40f5864cce8a150b330dd5f" }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch="bevy-0.5" }
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
# branch = "main"
# rev = "3475a64a2c04b237b4d3b8988722a48d29c17739"
