[package]
name = "killmath"
version = "0.1.0"
authors = ["David Rusu <davidrusu.me@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
bevy = "0.8"
bevy_egui = "0.16"
bevy-inspector-egui = "0.13.0"
# bevy-inspector-egui = "0.7"
